--- a/portfolio-3/package.json
+++ b/portfolio-3/package.json
@@ -9,7 +9,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-particles-js": "^2.4.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.3.0",
+    "react-sky": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
