--- a/portfolio-3/package.json
+++ b/portfolio-3/package.json
@@ -9,7 +9,6 @@
     "aos": "^2.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-particles-js": "^2.4.0",
     "react-scripts": "^3.3.0",
     "react-sky": "^1.1.0"
   },
@@ -34,7 +33,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "This project was created with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {},
   "repository": {
