--- a/portfolio-3/package.json
+++ b/portfolio-3/package.json
@@ -16,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build "
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,7 +37,9 @@
   },
   "description": "This project was created with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Poeboyo/portfolio-3.git"
@@ -53,5 +57,5 @@
   "bugs": {
     "url": "https://github.com/Poeboyo/portfolio-3/issues"
   },
-  "homepage": "https://github.com/Poeboyo/portfolio-3#readme"
+  "homepage": "https://poeboyo.github.io/portfolio-3/"
 }
