--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
   "bugs": {
     "url": "https://github.com/Poeboyo/portfolio-3/issues"
   },
-  "homepage": "https://poeboy.dev/portfolio-3/"
+  "homepage": "poeboyo.dev"
 }
